added banner section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/web.css">
 </head>
 <body>
-    
+    <!--banner-->
+    <section class="banner-main">
+        <div>
+            <nav>
+                <div class="logo-main">
+                    <h2 class="logo">LOGO</h2>
+                </div>
+                <button class="btn-primary bbtn">Sign up</button>
+            </nav>
+        </div>
+        <div class="banner1">
+            <h1>Cool Dark UI Template for Webflow Agencies!</h1>
+            </div>
+        <div class="button1">
+            <button class="btn-primary bbtn2">Stay focused</button>
+        </div>
+    </section>
 </body>
 </html>
