--- a/index.html
+++ b/index.html
@@ -27,5 +27,21 @@
             <button class="btn-primary bbtn2">Stay focused</button>
         </div>
     </section>
+    <!--action-->
+    <section class="action-main">
+        <div class="actions">
+            <div class="action1">
+                <div class="action-des">
+                    <h3>See It in Action</h3>
+                    <p>Explore the live preview and imagine your brand in this bold new look</p>
+                    <button class="btn-primary bbtn3">Launch Live Preview</button>
+                </div>
+                <div class="action-image">
+                <img src="/B12A01-landing-launchpad/Assets/wc-mini.png" alt="webflow" class="action-img">
+                </div>
+            </div>
+        </div>    
+    </section>
+    
 </body>
 </html>
