added follower section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,25 @@
             </div>
         </div>    
     </section>
-    
+    <!--follower-->
+    <section class="follower-main">
+        <div class="follower">
+            <h1>Join Thousands of Productive Users</h1>
+            <div class="user-main">
+                <div class="user">
+                   <h1>50K</h1>
+                   <p>Active User</p>
+                </div>
+                <div class="user">
+                   <h1>2M+</h1>
+                   <p>Focus Sessions</p>
+                </div>
+                <div class="user">
+                   <h1>95%</h1>
+                   <p>Satisfaction Rate</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
