added review section

--- a/index.html
+++ b/index.html
@@ -62,5 +62,73 @@
             </div>
         </div>
     </section>
+    <!--review-->
+    <section class="review-main">
+    <div class="review">
+        <h1>What our users say</h1>
+        <div class="review1">
+            <div class="review11">
+                <div class="rev">
+                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                </div>
+                    <h4>Loved by Designers</h4>
+                    <p>This template instantly leveled up our presence. -Studio Vertex"</p>
+                <div class="review11-img">
+                <div class="rev1-img">
+                    <img src="/B12A01-landing-launchpad/Assets/avatar.png" alt="" class="rev1-img1">
+                </div>
+                <div class="rv">
+                    <h5>Reviewer name</h5>
+                    <p>Date</p>
+                </div>
+                </div>
+            </div>
+            <div class="review11">
+                <div class="rev">
+                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                </div>
+                    <h4>Loved by Designers</h4>
+                    <p>This template instantly leveled up our presence. -Studio Vertex"</p>
+                <div class="review11-img">
+                <div class="rev1-img">
+                     <img src="/B12A01-landing-launchpad/Assets/avatar.png" alt="" class="rev1-img1">
+                </div>
+                <div class="rv">
+                    <h5>Reviewer name</h5>
+                   <p>Date</p>
+                </div>
+                </div>
+            </div>
+            <div class="review11">
+                <div class="rev">
+                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                </div>
+                    <h4>Loved by Designers</h4>
+                    <p>This template instantly leveled up our presence. -Studio Vertex"</p>
+                <div class="review11-img">
+                <div class="rev1-img">
+                    <img src="/B12A01-landing-launchpad/Assets/avatar.png" alt="" class="rev1-img1">
+                </div>
+                <div class="rv">
+                    <h5>Reviewer name</h5>
+                    <p>Date</p>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>    
+    </section>
 </body>
 </html>
