--- a/index.html
+++ b/index.html
@@ -130,5 +130,14 @@
         </div>
     </div>    
     </section>
+    <!--focus-->
+    <section class="focus-main">
+        <div class="focus">
+            <h1>Ready to focus better</h1>
+            <p>This template instantly leveled up our presence. -Studio Vertex"</p>
+            <button class="btn-primary foc">Get Started Free</button><br>
+            <img src="/B12A01-landing-launchpad/Assets/wc-big.png" alt="" class="focus-image">
+        </div>    
+    </section>
 </body>
 </html>
