added contact main

--- a/index.html
+++ b/index.html
@@ -139,5 +139,27 @@
             <img src="/B12A01-landing-launchpad/Assets/wc-big.png" alt="" class="focus-image">
         </div>    
     </section>
+    <!--contact-->
+    <section class="contact-main">
+        <div class="cnt">    
+            <div class="cnt-h">
+                <h1>Let's Get in Touch</h1>
+            </div>
+            <div class="contact">
+                <span>Email</span>
+                <br>
+                <input type="email" name="Email" id="" placeholder="example@gmail.com" class="con1">
+                <br>
+                <span>Name</span>
+                <br>
+                <input type="text" name="Name" id="" placeholder="Full Name" class="con1">
+                <span>Message</span>
+                <br>
+                <textarea name="message" id="" placeholder="Write your message..." class="con2"></textarea>
+                <br>
+                <button class="cnt0 btn-primary">Get in Touch</button>
+            </div>
+        </div>    
+    </section>
 </body>
 </html>
