added footer section

--- a/index.html
+++ b/index.html
@@ -161,5 +161,20 @@
             </div>
         </div>    
     </section>
+    <!--footer-->
+    <section class="footer-main">
+        <div class="foot">
+            <div class="footer">
+                <h1 class="logo">LOGO</h1>
+                <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+            </div>
+            <div class="link">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">How it Works</a>
+                <a href="">Services</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
