fixed images path and moved Assets to images folder

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <button class="btn-primary bbtn3">Launch Live Preview</button>
                 </div>
                 <div class="action-image">
-                <img src="/B12A01-landing-launchpad/Assets/wc-mini.png" alt="webflow" class="action-img">
+                <img src="images/Assets/wc-mini.png" alt="webflow" class="action-img">
                 </div>
             </div>
         </div>    
@@ -69,17 +69,17 @@
         <div class="review1">
             <div class="review11">
                 <div class="rev">
-                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
-                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
-                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
-                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
-                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="images/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="images/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="images/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="images/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="images/Assets/icon-star.png" alt="" class="rev0">
                 </div>
                     <h4>Loved by Designers</h4>
                     <p>This template instantly leveled up our presence. -Studio Vertex"</p>
                 <div class="review11-img">
                 <div class="rev1-img">
-                    <img src="/B12A01-landing-launchpad/Assets/avatar.png" alt="" class="rev1-img1">
+                    <img src="images/Assets/avatar.png" alt="" class="rev1-img1">
                 </div>
                 <div class="rv">
                     <h5>Reviewer name</h5>
@@ -89,17 +89,17 @@
             </div>
             <div class="review11">
                 <div class="rev">
-                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
-                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
-                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
-                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
-                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="images/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="images/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="images/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="images/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="images/Assets/icon-star.png" alt="" class="rev0">
                 </div>
                     <h4>Loved by Designers</h4>
                     <p>This template instantly leveled up our presence. -Studio Vertex"</p>
                 <div class="review11-img">
                 <div class="rev1-img">
-                     <img src="/B12A01-landing-launchpad/Assets/avatar.png" alt="" class="rev1-img1">
+                     <img src="images/Assets/avatar.png" alt="" class="rev1-img1">
                 </div>
                 <div class="rv">
                     <h5>Reviewer name</h5>
@@ -109,17 +109,17 @@
             </div>
             <div class="review11">
                 <div class="rev">
-                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
-                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
-                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
-                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
-                    <img src="/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="images/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="images/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="images/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="images/Assets/icon-star.png" alt="" class="rev0">
+                    <img src="images/Assets/icon-star.png" alt="" class="rev0">
                 </div>
                     <h4>Loved by Designers</h4>
                     <p>This template instantly leveled up our presence. -Studio Vertex"</p>
                 <div class="review11-img">
                 <div class="rev1-img">
-                    <img src="/B12A01-landing-launchpad/Assets/avatar.png" alt="" class="rev1-img1">
+                    <img src="images/Assets/avatar.png" alt="" class="rev1-img1">
                 </div>
                 <div class="rv">
                     <h5>Reviewer name</h5>
@@ -135,8 +135,8 @@
         <div class="focus">
             <h1>Ready to focus better</h1>
             <p>This template instantly leveled up our presence. -Studio Vertex"</p>
-            <button class="btn-primary foc">Get Started Free</button><br>
-            <img src="/B12A01-landing-launchpad/Assets/wc-big.png" alt="" class="focus-image">
+            <button class="btn-primary foc">Get Started</button><br>
+            <img src="images/Assets/wc-big.png" alt="" class="focus-image">
         </div>    
     </section>
     <!--contact-->
